[package]
name = "total_cmp_float_wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Sebastien Marleau <smarleau.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
derive_more = { version = "1.0", features = [
    "add",
    "add_assign",
    "mul",
    "mul_assign",
    "into",
    "from",
] }
